# nequip-profiling

./: pyproject.toml
scripts/: compile.sh  run.sl
src/nequip_profiling/: __init__.py  benchmark_utils.py
src/structure/: Li6PS5Cl_conventional_cell_POSCAR
